4284 Fix Section/Group Dropdown and 'Showing [x] Students' text vertical alignment (#4310)
(cherry picked from commit 7e95049032a1013ed2f6304ab16bec16b19918d0)

--- a/gradebookng/tool/src/webapp/styles/gradebook-grades.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-grades.css
@@ -507,6 +507,10 @@
   display: inline-block;
   vertical-align: middle;
   margin-left: 4px;
+  line-height: 40px;
+}
+#gradebookGradesToolbar > ul > li > * {
+  line-height: initial;
 }
 #toggleGradeItemsToolbarItem:after {
   font-family: 'gradebook-icons';
